--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ $RECYCLE.BIN/
 *.msm
 *.msp
 
+# Python binaries
+*.pyc
+
+
 # =========================
 # Operating System Files
 # =========================
@@ -40,4 +44,4 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
- *.pyc
+ 
